<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>erl_path_planning</name>
    <version>0.2.0</version>
    <description>erl_path_planning is a C++ library of path planning algorithm.</description>
    <author email="daizhirui@hotmail.com">Zhirui Dai</author>
    <maintainer email="daizhirui@hotmail.com">Zhirui Dai</maintainer>
    <license>MIT</license>
    <url type="repository">https://github.com/ExistentialRobotics/erl_path_planning.git</url>

    <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
    <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
    <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_python</buildtool_depend>
    <buildtool_depend>erl_cmake_tools</buildtool_depend>    <!-- required -->

    <build_depend>erl_common</build_depend>
    <build_depend>erl_env</build_depend>
    <build_depend>erl_geometry</build_depend>

    <build_export_depend>erl_common</build_export_depend>
    <build_export_depend>erl_env</build_export_depend>
    <build_export_depend>erl_geometry</build_export_depend>

    <export>
        <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    </export>

</package>
