[build-system]
requires = ["setuptools", "wheel", "toml"]

[tool.black]
line-length = 120

[erl]
description = "Python bindings for erl_path_planning"
python_pkg_name = "erl_path_planning"
pybind_module_name = "pyerl_path_planning"
erl_dependencies = ["erl_common", "erl_env", "erl_geometry"]
build_type = "Release"
version = "0.1.0"
author = "Zhirui Dai"
author_email = "zhdai@ucsd.edu"
entry_points = { console_scripts = [] }
license = "MIT"
