[build-system]
requires = ["setuptools", "wheel", "toml"]

[tool.black]
line-length = 120

[erl]
erl_dependencies = ["erl_cmake_tools", "erl_common", "erl_env", "erl_geometry"]
build_type = "Release"

[project]
name = "erl_path_planning"
version = "0.2.0"
description = "Python package for erl_path_planning"
authors = [
    { name = "Zhirui Dai", email = "daizhirui@hotmail.com" }
]
maintainers = [
    { name = "Zhirui Dai", email = "daizhirui@hotmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = []
